...
                    blurRadius: 4,
                    offset: const Offset(0, 1.5),
                  ),
                ],
              ),
              child: IconButton(
                key: const ValueKey('dashboard_work_schedule_btn'),
                tooltip: 'Jadwal Kerja Saya',
                padding: EdgeInsets.zero,
                constraints: const BoxConstraints(),
                onPressed: () {
                  context.push(Routes.WORK_SCHEDULE);
                },
...
                            blurRadius: 4,
                            offset: const Offset(0, 1.5),
                          ),
                        ],
                      ),
                      child: IconButton(
                        key: const ValueKey('dashboard_notification_btn'),
                        tooltip: 'Notifikasi',
                        padding: EdgeInsets.zero,
                        constraints: const BoxConstraints(),
                        onPressed: () async {
                          await context.push(Routes.NOTIFICATIONS);
                          if (context.mounted) {
...
