...
                                            message: state.message,
                                          );
                                        }
                                      },
                                      builder: (context, state) {
                                        return AppButton(
                                          text: 'Login',
                                          trailingIcon: LucideIcons.arrowRight,
                                          isLoading: state is AuthLoading,
                                          onPressed: _onSignInPressed,
                                        );
                                      },
                                    ),
...
